--- a/app/assets/stylesheets/tei_styles.css
+++ b/app/assets/stylesheets/tei_styles.css
@@ -9104,13 +9104,45 @@ td{
   margin: none;
 }
 
+@media only screen and (min-width: 501px){
+  #mobile_reader{
+    display: none;
+  }
+}
+
 @media only screen and (max-width: 500px){
   #TEI_left_panel{
-    display:none !important;
+/*    display:none !important;
+*/
+    float: none !important;
+    width: 80% !important;
+    border-right:none !important;
+    margin-left: 10% !important;
+    margin-right: 10% !important;
+    height: auto !important;
+  }
+  #left-content{
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+  }
+
+  #hidden-title{
+    padding-left: 0px !important;
+  }
+
+  #num_laisses{
+    display: none !important;
+  }
+
+  #TEI_left_panel hr{
+    display: none !important;
+  }
+  #notes{
+    display: none !important;
   }
   #top-half{
-    display:none;
-  }
+/*    display:none;
+*/  }
   #TEI_reader{
     margin-left: 0px !important;
     padding-left: 0px !important;
