--- a/app/views/pages/p.html.erb
+++ b/app/views/pages/p.html.erb
@@ -1,62 +1,1 @@
-<%#= stylesheet_link_tag'tei_styles' %>
-<%#= stylesheet_link_tag 'app' %>
-
-<% @title, @introduction, @text, @line_groups = parse_tei('p.xml') %>
-                <div id="TEI_left_panel">
-                    <TEI>
-                        <div id="left-content">
-                            <div id="top-half">
-                                <div id="hidden-title">
-                                    <%= @title %>
-                                </div>
-
-                                <div class="center-outer">
-                                    <div class="center-inner">
-                                        <div id="num_laisses"></div>
-                                        <input type="text" id="selected_laisse"/>
-                                            <a onclick="reveal_laisse()" id="top">Show Laisse</a> | 
-                                            <a onclick="browse_previous()">Previous</a> | 
-                                            <a onclick="browse_next()">Next</a>
-                                    </div>
-                                </div>
-                            </div>
-                        <hr>
-                        </div>
-                        <div id="notes">
-                            <div id="hidden-introduction">
-                                <%= @introduction %>
-                            </div>
-                            <div id="note-header" class="hidden">Notes</div>
-                            <div class="note-contents hidden">
-                            <!-- You'll probably want to have a @footnotes variable here. parse_footnote() gets the note text added to it for each annotation present in the line_group from whatever they're stored in. Then parse_footnotes() here generates the tags. Then you use the javascript to  -->
-                            <%#= parse_footnotes()%>
-                                <footnote id="1">This is the wrong footnote.</footnote>
-                                <footnote id="2">This is the wrong footnote.</footnote>
-                                <footnote id="3">This is the right footnote.</footnote>
-                                <footnote id="4">This is the wrong footnote.</footnote>
-                                <div id="back_to_intro"><a onclick="display_intro()">Back to Introduction</a></div>
-                            </div>
-                        </div>
-                    </TEI>
-                </div> 
-
-                <div id="TEI_reader">
-                    <div id="tei_wrapper">
-                        <%= parse_line_groups(@line_groups)%>
-                    </div>
-                    <div id="mobile_reader">
-                        <div class="center-outer">
-                            <div class="center-inner">
-                                <div id="bot_reader"></div>
-                                <input type="text" id="bot_laisse"/>
-                                    <a onclick="reveal_laisse()" id="top">Show Laisse</a> | 
-                                    <a onclick="browse_previous()">Previous</a> | 
-                                    <a onclick="browse_next()">Next</a>
-                            </div>
-                        </div>
-                    </div> 
-                </div>
-
-                    <script>
-                        $(document).foundation();
-                    </script>
+<%= render 'layouts/reading_interface' %>
