--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -8,12 +8,13 @@
 
                 <div class="center-outer">
                     <div class="center-inner">
-                        <div id="num_laisses"></div>
-                        <input type="text" id="selected_laisse"/>
-                            <a onclick="reveal_laisse()" id="top">Show Laisse
-                            </a> |
-                            <a onclick="browse_previous()">Previous</a> |
-                            <a onclick="browse_next()">Next</a>
+                    <%= t(page_entries_info(@line_groups))%>
+                            </a>
+                                <%= form_tag @current_page, :method => "get", :id => "jump_form" do %>
+                                    <%= text_field_tag :page, params[:page], :id => 'selected_laisse' %>
+                                    <%= submit_tag("Jump", :name => nil, :id => 'jump_button') + '|'%>
+                                <% end %>
+                            <%= will_paginate(@line_groups, :page_links => false, :next_label => "", :previous_label => "Previous") + "|" + will_paginate(@line_groups, :page_links => false, :next_label => "Next", :previous_label => "") %>
                     </div>
                 </div>
             </div>
