--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -39,7 +39,7 @@
           <h5 id="sub-header">Lead Investigators</h5>
            
           <div class="participant_section"><a href="http://www.loyola.edu/academic/modernlanguages/faculty/italian/morgan.aspx">Leslie Zarker Morgan</a>, Project Director and Principal Investigator (Loyola University Maryland)<br>
-                    <a href="http://www.unf.edu/~sschwam/">Shira Schwam-Baird</a>, Principal Investigator (University of South Florida)<br>
+                    <a href="http://www.unf.edu/~sschwam/">Shira Schwam-Baird</a>, Principal Investigator (University of North Florida)<br>
                     <a href="https://wlu.academia.edu/StephenPatrickMcCormick">Stephen P. McCormick</a>, Principal Investigator (Washington and Lee University)</div>
            
           <h5 id="sub-header">Collaborating Scholars</h5>
