--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,18 +1,7 @@
 <!doctype html>
 <html class="no-js background" lang="en" id="landing">
-  <head> <!--v 0.1-->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="DH, digital humanities, Huon d'Auvergne, manuscript, edition, franco-italian, TEI">
-    <meta name="description" content="A digital edition of the Huon d'Auvergne, a pre-modern, Franco-Italian Epic">
-    <title>Huon d'Auvergne | A Digital Edition</title>
-<!--     <link rel="stylesheet" href="/build/css/base_styles.css" />
- -->    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
   <body id="homepage-body">
    
-    <!-- needed to keep footer at bottom -->
-
     <header class="row">
       <div class="large-12 columns text-center">
        <h1>Huon d'Auvergne</h1>
@@ -65,9 +54,6 @@
       </div>
 
     </section>
-<!--     <script src="/build/js/base_scripts.js"></script>
- -->    <script>
-      $(document).foundation();
-    </script>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
