adds loyola logo

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,5 @@
 <div class="footer">
   <%= link_to( image_tag('dh_at_wandl.png'), "https://digitalhumanities.wlu.edu/") %>
   <%= link_to( image_tag('neh_logo.png'), "https://www.neh.gov/" ) %>
+  <%= link_to( image_tag('loyola_logo.svg'), "http://www.loyola.edu/" ) %>
 </div>
