--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,4 +2,5 @@
   <%= link_to( image_tag('dh_at_wandl.png'), "https://digitalhumanities.wlu.edu/") %>
   <%= link_to( image_tag('neh_logo.png'), "https://www.neh.gov/" ) %>
   <%= link_to( image_tag('loyola_logo.svg'), "https://www.loyola.edu/" ) %>
+  <%= link_to( image_tag('unf_logo.svg', :id => "unf_logo"), "https://www.unf.edu/" ) %>
 </div>
