updates front page

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,7 +9,7 @@
       <div class="large-8 large-offset-2 columns">
 
 <!--       <img src="/img/hours_cropped.jpg"> -->
-        <p>The Huon d'Auvergne Digital Edition is an inter-institutional, interdisciplinary project that presents the Franco-Italian Huon d'Auvergne romance-epic to a general audience for the first time. Funded by the National Endowment for the Humanities, the project aims to reach a diverse audience of both students and researchers. The modern English translation will make the text available widely for the first time, while the critical editions will allow epic scholars to read and research the Huon d'Auvergne textual tradition. The digital tools presented in this site will eventually facilitate access to high-resolution images of the manuscripts. It is our hope that the textual resources presented on our site will be used to further both research and teaching in epic studies.</p>
+        <p>The Huon d'Auvergne Digital Edition is an inter-institutional, interdisciplinary project that presents the Franco-Italian Huon d'Auvergne romance-epic to a general audience for the first time. Funded by the National Endowment for the Humanities, the project aims to reach a diverse audience of both students and researchers. The modern English translation will make the text available widely for the first time, while the critical editions will allow epic scholars to read and research the Huon d'Auvergne textual tradition. The digital tools presented in this site will eventually facilitate access to high-resolution images of the manuscripts. It is our hope that the textual resources presented on our site will be used to further both research and teaching in epic studies. A technical report of the project can be found on our [GitHub repository](https://github.com/wludh/huon_rails/blob/master/tech-report.md).</p>
         <hr>
         <h4 id="sub-header">Critical Editions</h4>
         <div id="manuscript_list_index">
@@ -44,8 +44,9 @@
           <h5 id="sub-header">Washington and Lee Student Researchers</h4>
            
           <div class="participant_section">Natsumi Alvarez (Summer 2015) - TEI encoding and development<br>
-                    Dashiel Derricks (Fall 2015 - present) - TEI encoding and development; Versioning Machine<br>
-                    Sarah Schaffer (Winter 2016 - present)</div>
+                    Dashiel Derricks (Fall 2015 - Winter 2016) - TEI encoding and development; Versioning Machine<br>
+                    Sarah Schaffer (Winter 2016) - Annotation prototyping</div>
+                    Abdurrafey Khan (Fall) - Versioning Machine
         </div>
        <hr>
       </div>
