--- a/app/views/pages/t.html.erb
+++ b/app/views/pages/t.html.erb
@@ -1,16 +1,2 @@
-
-    <header class="row">
-      <div class="large-12 columns text-center">
-       <h1>Turin Manuscript</h1>
-      </div>
-    </header>
-
-     <section class="row">
-      <div class="large-8 large-offset-2 columns">
-
-<!--       <img src="/img/hours_cropped.jpg"> -->
-        <h4 id="#sub-header">Coming soon.</h4>
-      </div>
-
-    </section>
-
+<% @current_page = 't_manuscript' %>
+<%= render 'layouts/reading_interface' %>
