--- a/app/views/pages/b.html.erb
+++ b/app/views/pages/b.html.erb
@@ -1,19 +1,2 @@
-
-    
-    <!-- needed to keep footer at bottom -->
-
-    <header class="row">
-      <div class="large-12 columns text-center">
-       <h1>Berlin Manuscript</h1>
-      </div>
-    </header>
-
-     <section class="row">
-      <div class="large-8 large-offset-2 columns">
-
-<!--       <img src="/img/hours_cropped.jpg"> -->
-        <h4 id="#sub-header">Coming soon.</h4>
-    </div>
-      </div>
-
-    </section>
+<% @current_page = 'br_manuscript' %>
+<%= render 'layouts/reading_interface' %>
