--- a/app/views/pages/br.html.erb
+++ b/app/views/pages/br.html.erb
@@ -1,30 +1,2 @@
-<%#= stylesheet_link_tag 'base_styles' %>
-<%#= stylesheet_link_tag'tei_styles' %>
-<%#= stylesheet_link_tag 'app' %>
-<!--
-
-<#% @title, @introduction, @text, @line_groups = parse_tei('br.xml') %>
-                <TEI>
-                    <div id="hidden-title">
-                        <%= @title %>
-                    </div>
-                    placeholder for byline in the future
-               <div id="hidden-byline">
-                       <%= @byline %> 
-                    </div>
-                    <div id="hidden-introduction">
-                        <%= @introduction %>
-                    </div>
-                </TEI>
-
-                <div id="tei-wrapper">
-                    <#% for lg in @line_groups %>
-                        
-                        <#% for l in lg.search('l') %>
-                            <p><%= l.text %></p>
-                        <#% end %>
-                        
-                    <#% end %>
-                </div> -->
-<% @title, @introduction, @text, @line_groups = parse_tei('br.xml') %>
+<% @current_page = 't_manuscript' %>
 <%= render 'layouts/reading_interface' %>
