begins to redistribute the page elements for the reading interface. refs #15

--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -651,3 +651,14 @@ td{
   float: left;
   margin-left: -50px;
 }
+#introduction{
+    padding-top: 68px;
+    height: 100%;
+    text-align: justify;
+}
+#title{
+      font-size: 28px;
+}
+#links{
+  text-align: center;
+}
