--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -662,3 +662,31 @@ td{
 #links{
   text-align: center;
 }
+
+#reader-nav{
+  width: 100%;
+/*  position: fixed;
+*/  height: 48px;
+  z-index: 1000;
+  padding-top: 48px;
+
+}
+
+#sub-title{
+  float: left;
+  padding: 0 0.9375rem;
+/*  padding-top: 6px;*/
+line-height: 2.8125rem;
+
+}
+#reader-hr{
+  margin: 0.5em 0.5em 0 0;
+  margin-top: -2px;
+}
+#reader-nav-links{
+  line-height: 2.8125rem;
+    padding: 0 0.9375rem;
+}
+#notes{
+  float: right;
+}
