adds link to tei for now. might not be able to actually render the code block and that might not make a whole lot of sense anyway. at least now you can get access to the tei.

--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -16,6 +16,7 @@
                     <%= will_paginate(@line_groups, :page_links => false, :next_label => "", :previous_label => "Previous") + "|" + will_paginate(@line_groups, :page_links => false, :next_label => "Next", :previous_label => "") + " |"%>
 
                 <%= link_to('Intro', url_for(params.merge(:edition => nil))) %>
+                <%= link_to('TEI', 'https://raw.githubusercontent.com/wludh/huon_rails/master/lib/assets/' + @current_page_short + '.xml') %>
                     <hr id="reader-hr">
             </div>
 <!--             </div>
