--- a/app/views/pages/br.html.erb
+++ b/app/views/pages/br.html.erb
@@ -1,7 +1,9 @@
 <% unless params.key?('edition') %>
     <% @current_page = 'br_manuscript' %>
+    <% @current_page_short = 'br' %>
     <%= render 'layouts/manuscript_introduction' %>
 <% else %>
     <% @current_page = 'br_manuscript' %>
+    <% @current_page_short = 'br' %>
     <%= render 'layouts/reading_interface' %>
 <% end %>
