--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -18,7 +18,10 @@
                 <%= link_to('Intro', url_for(params.merge(:edition => nil))) %>
                 |
                 <%= link_to('TEI', 'https://raw.githubusercontent.com/wludh/huon_rails/master/lib/assets/' + @current_page_short + '.xml') %>
-                <form style="float: right;"> <input type="checkbox" name="corrCheckbox" id="corrCheckbox" style="display: inline;" onchange="reveal_corrections()"><label for="corrCheckbox"> Corrections</label> </form>
+                |
+                <form id="corr-form">
+                <label for="corrCheckbox" id="corr-label"> Corrections</label>
+                <input type="checkbox" name="corrCheckbox" id="corrCheckbox" style="display: inline;" onchange="reveal_corrections()"> </form>
                 <hr id="reader-hr">
             </div>
 <!--             </div>
