--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -11,6 +11,7 @@
                     </a>
                         <%= form_tag @current_page, :method => "get", :id => "jump_form" do %>
                             <%= text_field_tag :page, params[:page], :id => 'selected_laisse' %>
+                            <input name="edition" value="true" style="display: none;"></input>
                             <%= submit_tag("Jump", :name => nil, :id => 'jump_button') + '|'%>
                         <% end %>
                     <%= will_paginate(@line_groups, :page_links => false, :next_label => "", :previous_label => "Previous") + "|" + will_paginate(@line_groups, :page_links => false, :next_label => "Next", :previous_label => "") + " |"%>
