--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -22,7 +22,7 @@
                 |
                 <form id="corr-form">
                 <label for="corrCheckbox" id="corr-label"> Corrections</label>
-                <input type="checkbox" name="corrCheckbox" id="corrCheckbox" style="display: inline;" onchange="reveal_corrections()"> </form>
+                <input type="checkbox" name="corrCheckbox" id="corrCheckbox" style="display: inline;"> </form>
                 | <div id="image-reveal">MS Image</div>
                 <hr id="reader-hr">
             </div>
