continuing to refactor js refs #39

--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -32,7 +32,7 @@
 
 </div>
     <div id="notes" style="display: none;">
-    <%= image_tag('closePanel.png', class: 'closePanel', id: 'note-close', onclick: 'hideNotes();', alt: 'X') %>
+    <%= image_tag('closePanel.png', class: 'closePanel', id: 'note-close', alt: 'X') %>
         <div id="note-header">Notes</div>
             <div class="note-contents hidden">
             <!-- use javascript to bring out the notes here. -->
