--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -33,13 +33,14 @@
 </div>
     <div id="notes" style="display: none;">
     <%= image_tag('closePanel.png', class: 'closePanel', id: 'note-close', alt: 'X') %>
-        <div id="note-header">Notes</div>
+        <div id="note-header" class="hidden">Notes</div>
+        <div id="image-header" class="hidden">Manuscript Image</div>
             <div class="note-contents hidden">
             <!-- use javascript to bring out the notes here. -->
                 <%= @current_notes %>
             </div>
             <div id="ms-image-container">
-                <%= image_tag('kittens.jpg', id: 'ms-image', alt: 'Manuscript image') %>
+                <%= image_tag('kittens.jpg', id: 'ms-image', class: 'hidden', alt: 'Manuscript image') %>
             </div>
     </div>
 <div id="reader-center-div">
