--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -490,6 +490,7 @@ footnote{
 }
 
 #TEI_reader{
+  margin-top: 48px;
   padding-top: 44px;
   border-right: 1px;
 }
@@ -660,9 +661,9 @@ td{
 
 #reader-nav{
   width: 100%;
-/*  position: fixed;
-*/  height: 48px;
-  z-index: 1000;
+  position: fixed;
+  height: 48px;
+  z-index: 5000;
   padding-top: 48px;
 
 }
@@ -687,8 +688,8 @@ line-height: 2.8125rem;
   padding-left: 40px;
   padding-right: 40px;
   float: right;
-  margin-top: 45px;
-  padding-top: 24px;
+  margin-top: 48px;
+  padding-top: 68px;
   width: 40%;
   border-left: 1px #DDDDDD solid;
 }
