updates the nav bar for color

--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -24,8 +24,8 @@
                 <label for="corrCheckbox" id="corr-label"> Corrections</label>
                 <input type="checkbox" name="corrCheckbox" id="corrCheckbox" style="display: inline;"> </form>
                 | <div id="image-reveal">MS Image</div>
-<!--                 <hr id="reader-hr">
- -->            </div>
+                <hr id="reader-hr">
+            </div>
 <!--             </div>
         </div> -->
         <div id="clear"></div>
